--- a/index.html
+++ b/index.html
@@ -9,51 +9,51 @@
         rel="stylesheet" href="style.css" 
         media="screen" charset="utf-8">
   </head>
-  <body>
+  <body class="page">
     <div class="header">
-      <img src="./eisenhower-matrix.jpg">
+      <img class="header-img" src="./eisenhower-matrix.jpg">
       <a class="header-info" 
           href="https://goal-life.com/page/method/matrix-eisenhower">Want more details
       </a>
     </div>
     <div class="main">
       <p id="main-header">
-        <label for="new-task">Add Item</label>
+        <label class="add-task" for="new-task">Add Item</label>
         <div class="task-wrapper">
           <input id="new-task"class="task" type="text">
-          <button>Add</button>
+          <button class="btn">Add</button>
         </div>
       </p>
-      <h3>Todo</h3>
-      <ul id="incomplete-tasks">
-        <li>
-          <input type="checkbox">
+      <h3 class="todo-title">Todo</h3>
+      <ul class="todo" id="incomplete-tasks">
+        <li class="todo-item">
+          <input class="todo-check" type="checkbox">
           <label class="task">Pay Bills</label>
           <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete">
-            <img src="./remove.svg">
+          <button class="btn edit">Edit</button>
+          <button class="btn delete">
+            <img class="todo-img" src="./remove.svg">
           </button>
         </li>
-        <li class="edit-mode">
-          <input type="checkbox">
+        <li class="todo-item edit-mode">
+          <input class="todo-check" type="checkbox">
           <label class="task">Go Shopping</label>
           <input type="text" value="Go Shopping" class="task">
-          <button class="edit">Save</button>
-          <button class="delete">
-            <img src="./remove.svg">
+          <button class="btn edit">Save</button>
+          <button class="btn delete">
+            <img class="todo-img" src="./remove.svg">
           </button>
         </li>
       </ul>
-      <h3>Completed</h3>
-      <ul id="completed-tasks">
-        <li>
-          <input type="checkbox" checked>
+      <h3 class="todo-title">Completed</h3>
+      <ul class="todo" id="completed-tasks">
+        <li class="todo-item">
+          <input class="todo-check" type="checkbox" checked>
           <label class="task">See the Doctor</label>
           <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete">
-             <img src="./remove.svg">
+          <button class="btn edit">Edit</button>
+          <button class="btn delete">
+             <img class="todo-img" src="./remove.svg">
           </button>
         </li>
       </ul>
