--- a/index.html
+++ b/index.html
@@ -10,54 +10,58 @@
         media="screen" charset="utf-8">
   </head>
   <body class="page">
-    <div class="header">
+    <header class="header">
       <img class="header-img" src="./eisenhower-matrix.jpg">
       <a class="header-info" 
           href="https://goal-life.com/page/method/matrix-eisenhower">Want more details
       </a>
-    </div>
-    <div class="main">
-      <p id="main-header">
+    </header>
+    <main class="main">
+      <section id="main-header">
         <label class="add-task" for="new-task">Add Item</label>
         <div class="task-wrapper">
           <input id="new-task"class="task" type="text">
           <button class="btn">Add</button>
         </div>
-      </p>
-      <h3 class="todo-title">Todo</h3>
-      <ul class="todo" id="incomplete-tasks">
-        <li class="todo-item">
-          <input class="todo-check" type="checkbox">
-          <label class="task">Pay Bills</label>
-          <input type="text" class="task">
-          <button class="btn edit">Edit</button>
-          <button class="btn delete">
-            <img class="todo-img" src="./remove.svg">
-          </button>
-        </li>
-        <li class="todo-item edit-mode">
-          <input class="todo-check" type="checkbox">
-          <label class="task">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task">
-          <button class="btn edit">Save</button>
-          <button class="btn delete">
-            <img class="todo-img" src="./remove.svg">
-          </button>
-        </li>
-      </ul>
+      </section>
+      <section>
+        <h3 class="todo-title">Todo</h3>
+        <ul class="todo" id="incomplete-tasks">
+          <li class="todo-item">
+            <input class="todo-check" type="checkbox">
+            <label class="task">Pay Bills</label>
+            <input type="text" class="task">
+            <button class="btn edit">Edit</button>
+            <button class="btn delete">
+              <img class="todo-img" src="./remove.svg">
+            </button>
+          </li>
+          <li class="todo-item edit-mode">
+            <input class="todo-check" type="checkbox">
+            <label class="task">Go Shopping</label>
+            <input type="text" value="Go Shopping" class="task">
+            <button class="btn edit">Save</button>
+            <button class="btn delete">
+              <img class="todo-img" src="./remove.svg">
+            </button>
+          </li>
+        </ul>
+      </section>
+      <section>
       <h3 class="todo-title">Completed</h3>
-      <ul class="todo" id="completed-tasks">
-        <li class="todo-item">
-          <input class="todo-check" type="checkbox" checked>
-          <label class="task">See the Doctor</label>
-          <input type="text" class="task">
-          <button class="btn edit">Edit</button>
-          <button class="btn delete">
-             <img class="todo-img" src="./remove.svg">
-          </button>
-        </li>
-      </ul>
-    </div>
+        <ul class="todo" id="completed-tasks">
+          <li class="todo-item">
+            <input class="todo-check" type="checkbox" checked>
+            <label class="task">See the Doctor</label>
+            <input type="text" class="task">
+            <button class="btn edit">Edit</button>
+            <button class="btn delete">
+              <img class="todo-img" src="./remove.svg">
+            </button>
+          </li>
+        </ul>
+      </section>
+    </main>
     <script src="app.js"></script>
   </body>
 </html>
