--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body class="page">
     <header class="header">
-      <img class="header-img" src="./eisenhower-matrix.jpg">
+      <img class="header-img" src="./eisenhower-matrix.jpg" alt="eisenhower-matrix">
       <a class="header-info" 
           href="https://goal-life.com/page/method/matrix-eisenhower">Want more details
       </a>
@@ -33,7 +33,7 @@
             <input type="text" class="task">
             <button class="btn edit">Edit</button>
             <button class="btn delete">
-              <img class="todo-img" src="./remove.svg">
+              <img class="todo-img" src="./remove.svg" alt="remove">
             </button>
           </li>
           <li class="todo-item edit-mode">
@@ -42,7 +42,7 @@
             <input type="text" value="Go Shopping" class="task">
             <button class="btn edit">Save</button>
             <button class="btn delete">
-              <img class="todo-img" src="./remove.svg">
+              <img class="todo-img" src="./remove.svg" alt="remove">
             </button>
           </li>
         </ul>
@@ -56,7 +56,7 @@
             <input type="text" class="task">
             <button class="btn edit">Edit</button>
             <button class="btn delete">
-              <img class="todo-img" src="./remove.svg">
+              <img class="todo-img" src="./remove.svg" alt="remove">
             </button>
           </li>
         </ul>
