--- a/index.html
+++ b/index.html
@@ -11,38 +11,38 @@
   </head>
   <body class="page">
     <header class="header">
-      <img class="header-img" src="./eisenhower-matrix.jpg" alt="eisenhower-matrix">
-      <a class="header-info" 
+      <img class="header__img" src="./eisenhower-matrix.jpg" alt="eisenhower-matrix">
+      <a class="header__info" 
           href="https://goal-life.com/page/method/matrix-eisenhower">Want more details
       </a>
     </header>
     <main class="main">
       <section id="main-header">
-        <label class="add-task" for="new-task">Add Item</label>
-        <div class="task-wrapper">
-          <input id="new-task"class="task" type="text">
-          <button class="btn">Add</button>
+        <label class="main-header__add-task" for="new-task">Add Item</label>
+        <div class="main-header__task-wrapper">
+          <input id="new-task" class="task-wrapper__task task" type="text">
+          <button class="task-wrapper__btn btn">Add</button>
         </div>
       </section>
       <section>
         <h3 class="todo-title">Todo</h3>
         <ul class="todo" id="incomplete-tasks">
-          <li class="todo-item">
-            <input class="todo-check" type="checkbox">
-            <label class="task">Pay Bills</label>
-            <input type="text" class="task">
-            <button class="btn edit">Edit</button>
-            <button class="btn delete">
-              <img class="todo-img" src="./remove.svg" alt="remove">
+          <li class="todo__item">
+            <input class="item__check" type="checkbox">
+            <label class="item__label task">Pay Bills</label>
+            <input type="text" class="item__input task">
+            <button class="item__edit btn">Edit</button>
+            <button class="item__delete btn">
+              <img class="delete__img" src="./remove.svg" alt="remove">
             </button>
           </li>
-          <li class="todo-item edit-mode">
-            <input class="todo-check" type="checkbox">
-            <label class="task">Go Shopping</label>
-            <input type="text" value="Go Shopping" class="task">
-            <button class="btn edit">Save</button>
-            <button class="btn delete">
-              <img class="todo-img" src="./remove.svg" alt="remove">
+          <li class="todo__item todo__item--edit">
+            <input class="item__check" type="checkbox">
+            <label class="item__label task">Go Shopping</label>
+            <input type="text" value="Go Shopping" class="item__input task">
+            <button class="btn item__edit">Save</button>
+            <button class="btn item__delete">
+              <img class="delete__img" src="./remove.svg" alt="remove">
             </button>
           </li>
         </ul>
@@ -50,13 +50,13 @@
       <section>
       <h3 class="todo-title">Completed</h3>
         <ul class="todo" id="completed-tasks">
-          <li class="todo-item">
-            <input class="todo-check" type="checkbox" checked>
-            <label class="task">See the Doctor</label>
-            <input type="text" class="task">
-            <button class="btn edit">Edit</button>
-            <button class="btn delete">
-              <img class="todo-img" src="./remove.svg" alt="remove">
+          <li class="todo__item">
+            <input class="item__check" type="checkbox" checked>
+            <label class="item__label task">See the Doctor</label>
+            <input type="text" class="item__input task">
+            <button class="btn item__edit">Edit</button>
+            <button class="btn item__delete">
+              <img class="delete__img" src="./remove.svg" alt="remove">
             </button>
           </li>
         </ul>
